src/hello-world-configmap/Templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-configmap
  name: hello-world-configmap
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world-configmap
  type: ClusterIP
