src/hello-world-configmap/Templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world.part.xyz-rules
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.part10.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
                number: 3000
  tls:
  - secretName: hello-world.part10.xyz-tls
    hosts:
    - hello-world.part10.xyz
